syntax = "proto3";

package yandex.cloud.priv.datasphere.v2;

import "yandex/cloud/priv/datasphere/v2/lzy-zygote.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-auth.proto";

option go_package = "datasphere";
option java_outer_classname = "Channels";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

message Channel {
    string channelId = 1;
    string contentType = 2;
}

message ChannelRequest {
    Auth auth = 1;
    string contentType = 2;
}

message BindRequest {
    TaskCredentials auth = 1;

    string channelId = 2;
    string slotName = 3;

    string offset = 4;
}

message Binding {
    Status status = 1;

    enum Status {
        OK = 0;
        FAILED = 1;
    }
}

message ChannelStatus {
    Channel channel = 2;
    repeated SlotStatus connected = 3;
}

message ChannelStatusList {
    repeated ChannelStatus statuses = 1;
}

message OpenChannelRequest {
    Auth auth = 1;
    string channelId = 2;
}